--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -33,71 +33,56 @@ steps:
           limit: 1
   - wait
 
-  - label: "{{ matrix.TEST_ARCHITECTURE }} - {{ matrix.display }}"
+  - label: "{{ matrix.architecture }} - {{ matrix.group }} tests"
     key: "tests"
     agents:
       queue: "Oceananigans"
     command: |
-      if [[ "{{ matrix.TEST_ARCHITECTURE }}" == "CPU" ]]; then
+      if [[ "{{ matrix.architecture }}" == "CPU" ]]; then
         export CUDA_VISIBLE_DEVICES="-1"
+        export TEST_ARCHITECTURE="CPU"
       else
         export CUDA_VISIBLE_DEVICES="3"
+        export TEST_ARCHITECTURE="GPU"
       fi
 
+      # Strip emoji for environment variable
+      group="{{ matrix.group }}"
+      export TEST_GROUP="${group#* }"
+
+      echo $TEST_GROUP
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e \
         'using Pkg; Pkg.test()'
 
     matrix:
-      env:
-        - TEST_ARCHITECTURE: "CPU"
-        - TEST_ARCHITECTURE: "GPU"
-
-        - TEST_GROUP: "unit"
-          display: "🐇 unit tests"
-        - TEST_GROUP: "poisson_solvers_1"
-          display: "🕊️ poisson solver tests 1"
-        - TEST_GROUP: "poisson_solvers_2"
-          display: "🦖 poisson solver tests 2"
-        - TEST_GROUP: "matrix_poisson_solvers"
-          display: "🌷 matrix poisson solvers"
-        - TEST_GROUP: "general_solvers"
-          display: "🦤 general solver tests"
-        - TEST_GROUP: "tripolar_grid"
-          display: "🫐 tripolar grid tests"
-        - TEST_GROUP: "time_stepping_1"
-          display: "🦀 time-stepping 1"
-        - TEST_GROUP: "time_stepping_2"
-          display: "🦈 time-stepping 2"
-        - TEST_GROUP: "time_stepping_3"
-          display: "🦟 time-stepping 3"
-        - TEST_GROUP: "turbulence_closures"
-          display: "🎣 turbulence closures"
-        - TEST_GROUP: "hydrostatic_free_surface"
-          display: "🐙 hydrostatic free surface"
-        - TEST_GROUP: "shallow_water"
-          display: "🦢 shallow water model"
-        - TEST_GROUP: "simulation"
-          display: "🐳 simulation tests"
-        - TEST_GROUP: "lagrangian"
-          display: "🍂 lagrangian particles"
-        - TEST_GROUP: "abstract_operations"
-          display: "👻 abstract operations"
-        - TEST_GROUP: "multi_region"
-          display: "🧅 multi-region tests"
-        - TEST_GROUP: "nonhydrostatic_regression"
-          display: "🐫 nonhydrostatic regression"
-        - TEST_GROUP: "hydrostatic_regression"
-          display: "🙈 hydrostatic regression"
-        - TEST_GROUP: "scripts"
-          display: "🦧 scripts"
-        - TEST_GROUP: "vertical_coordinate"
-          display: "🥑 vertical coordinate"
-        - TEST_GROUP: "enzyme"
-          display: "👺 Enzyme extension"
-        - TEST_GROUP: "reactant_1"
-          display: "👹 IFRT Reactant 1"
-        - TEST_GROUP: "reactant_2"
-          display: "🎭 IFRT Reactant 2"
+      setup:
+        architecture:
+          - "CPU"
+          - "GPU"
+        group:
+          - "🐇 unit"
+          - "🕊 poisson_solvers_1"
+          - "🦖 poisson_solvers_2"
+          - "🌷 matrix_poisson_solvers"
+          - "🦤 general_solvers"
+          - "🫐 tripolar_grid"
+          - "🦀 time_stepping_1"
+          - "🦈 time_stepping_2"
+          - "🦟 time_stepping_3"
+          - "🎣 turbulence_closures"
+          - "🐙 hydrostatic_free_surface"
+          - "🦢 shallow_water"
+          - "🐳 simulation"
+          - "🍂 lagrangian"
+          - "👻 abstract_operations"
+          - "🧅 multi_region"
+          - "🐫 onhydrostatic_regression"
+          - "🙈 hydrostatic_regression"
+          - "🦧 scripts"
+          - "🥑 vertical_coordinate"
+          - "👺 enzyme"
+          - "👹 reactant_1"
+          - "🎭 reactant_2"
     retry:
       automatic:
         - exit_status: 1
