--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -48,9 +48,8 @@ steps:
 
       # Strip emoji for environment variable
       group="{{ matrix.group }}"
-      export TEST_GROUP="unit"
+      export TEST_GROUP=$(printf '%s' "$group" | sed 's/^[^ ]* //')
 
-      echo $TEST_GROUP
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e \
         'using Pkg; Pkg.test()'
 
