--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -69,25 +69,25 @@ steps:
           - "GPU"
         group:
           - "🐇 unit"
+          - "👻 abstract_operations"
           - "🕊 poisson_solvers_1"
           - "🦖 poisson_solvers_2"
           - "🌷 matrix_poisson_solvers"
           - "🦤 general_solvers"
-          - "🫐 tripolar_grid"
+          - "🎣 turbulence_closures"
           - "🦀 time_stepping_1"
           - "🦈 time_stepping_2"
           - "🦟 time_stepping_3"
-          - "🎣 turbulence_closures"
+          - "🐫 nonhydrostatic_regression"
           - "🐙 hydrostatic_free_surface"
+          - "🫐 tripolar_grid"
+          - "🥑 vertical_coordinate"
+          - "🙈 hydrostatic_regression"
           - "🦢 shallow_water"
           - "🐳 simulation"
-          - "🍂 lagrangian"
-          - "👻 abstract_operations"
+          - "🍂 lagrangian_particles"
           - "🧅 multi_region"
-          - "🐫 nonhydrostatic_regression"
-          - "🙈 hydrostatic_regression"
           - "🦧 scripts"
-          - "🥑 vertical_coordinate"
           - "👺 enzyme"
           - "👹 reactant_1"
           - "🎭 reactant_2"
