try uploading an artifact

--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -24,7 +24,6 @@ steps:
       # Download julia binaries
       wget -N -P $TARTARUS_HOME https://julialang-s3.julialang.org/bin/linux/x64/$JULIA_MINOR_VERSION/julia-$JULIA_VERSION-linux-x86_64.tar.gz
       tar xf $TARTARUS_HOME/julia-$JULIA_VERSION-linux-x86_64.tar.gz -C $TARTARUS_HOME
-      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no -e 'using Pkg; Pkg.instantiate()'
     agents:
       queue: "Oceananigans"
     retry:
@@ -45,20 +44,24 @@ steps:
       export BENCHMARK_GROUP="\${group#* }"
       echo $BENCHMARK_GROUP
 
+      # Instantiate
+      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no -e 'using Pkg; Pkg.instantiate()'
+
       # Run benchmarks
       $NSYS profile --output=nsys_output --trace=cuda $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no test/benchmark_tests.jl
-      $NSYS stats $OUTPUT.nsys-rep
+      $NSYS stats nsy_output.nsys-rep > nsys_output.txt
 
       # Remove generated output files
-      rm nsys_output.*
+      rm nsys_output.nsys-rep
+      rm nsys_output.sqlite
     matrix:
       setup:
         group:
           - "🍩 periodic"
-          - "📦 bounded"
-          - "🕊 periodic_cheap_vertical_advection"
-          - "🦖 bounded_cheap_vertical_advection"
-          - "🌷 immersed"
+          # - "📦 bounded"
+          # - "🕊 periodic_cheap_vertical_advection"
+          # - "🦖 bounded_cheap_vertical_advection"
+          # - "🌷 immersed"
     soft_fail:
       - exit_status: 3
 
